--- a/hobbies.html
+++ b/hobbies.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collin's Hobbies</title>
-    <link rel="stylesheet" type="text/css" href="./startbootstrap-resume-gh-pages/css/hobbiesStyles.css">
+    <link rel="stylesheet" type="text/css" href="./css/hobbiesStyles.css">
 </head>
 <body>
     <div id="header">
-        <img class="headerimg" src="./startbootstrap-resume-gh-pages/assets/img/GuatemalaHikeOverlook.png" alt="Hobbies Background">
+        <img class="headerimg" src="./assets/img/GuatemalaHikeOverlook.png" alt="Hobbies Background">
         <div class="headerOverlay">HOBBIES</div>
         <div class="headerOverlay2">HOBBIES</div>
         <div class="headerButton"><a class="aHeaderButton" href="#hiking"><button class="headerButtonStyle" onclick="slide('#hiking')">V</button></a></div>
@@ -25,7 +25,7 @@
                         <li>Length: 2.8mi</li>
                         <li>Elevation: 9,749ft</li>
                         <li>Trip Duration: 90-120min</li>
-                        <li class="devilsHeadimg"><img src="./startbootstrap-resume-gh-pages/assets/img/Devils Head.jpg" alt="Devil's Head"></li>
+                        <li class="devilsHeadimg"><img src="./assets/img/Devils Head.jpg" alt="Devil's Head"></li>
                     </ul>
                 </li>
                 <li>Grays & Torreys · Colorado 
@@ -34,7 +34,7 @@
                         <li>Elevation: Grays Peak(14,270ft)</li>
                         <li class="torreysElevation">Torreys Peak(14,267ft)</li>
                         <li>Trip Duration: 10hrs</li>
-                        <li class="gtimg"><img src="./startbootstrap-resume-gh-pages/assets/img/Greys & Torreys.jpg" alt="Grays & Torreys"></li>
+                        <li class="gtimg"><img src="./assets/img/Greys & Torreys.jpg" alt="Grays & Torreys"></li>
                     </ul>
                 </li>
                 <li>Y Mountain · Utah
@@ -42,7 +42,7 @@
                         <li>Length: 2mi</li>
                         <li>Elevation: 6,266ft</li>
                         <li>Trip Duration: 60min</li>
-                        <li class="yhike"><img src="./startbootstrap-resume-gh-pages/assets/img/The Y Hike Fall.png" alt="Y Hike"></li>
+                        <li class="yhike"><img src="./assets/img/The Y Hike Fall.png" alt="Y Hike"></li>
                     </ul>
                 </li>
                 <li>Colorado Trail · Colorado
@@ -50,7 +50,7 @@
                         <li>Length: 57mi</li>
                         <li>Elevation: 10,000ft(Avg)</li>
                         <li>Trip Duration: 4days</li>
-                        <li class="coloradoTrail"><img src="./startbootstrap-resume-gh-pages/assets/img/Colorado Trail.jpg" alt="Colorado Trail"></li>
+                        <li class="coloradoTrail"><img src="./assets/img/Colorado Trail.jpg" alt="Colorado Trail"></li>
                     </ul>
                 </li>
             </ol>
@@ -73,7 +73,7 @@
         <div id="tennis">
             <h1 class="tennisH1">Tennis</h1>
             <p class="tennisp">I have played tennis since I was 8 years old. I love tennis, but would say that it is my second favorite sport. I played all 4 years at Mountain Vista high school at the varisty level and went to the state tennis tournament all of those years as well. Only 3 people in the history of Mountain Vista High School have ever done that.</p>
-            <img class="tennisimg" src="./startbootstrap-resume-gh-pages/assets/img/Mountain Vista Logo.png" alt="Mountain Vista Logo" width="100px">
+            <img class="tennisimg" src="./assets/img/Mountain Vista Logo.png" alt="Mountain Vista Logo" width="100px">
         </div>
         <hr class="mainBodyHR">
         <div id="songWriting">
@@ -109,7 +109,7 @@
         <a href="#songWriting"><h3 class="songWritingTab">Song Writing</h3></a>
         <a href="#movieMaking"><h3 class="movieMakingTab">Movie Making</h3></a>
         <a href="#fifaWorldCup"><h3 class="fifaWorldCupTab">Fifa World Cup</h3></a>
-        <a class="goBack" href="./startbootstrap-resume-gh-pages/index.html"><h3 class="goBackH3">Go Back</h3></a>
+        <a class="goBack" href="./index.html"><h3 class="goBackH3">Go Back</h3></a>
         <hr class="navBarHR2" color="#f0a486">
         <div class="copyright">&copy; 2023 Collin Bean</div>
     </div>
